# src/albums/albums.controller.ts
@@ -8,11 +8,14 @@ import {
   Param,
   Post,
   Put,
+  UseGuards,
 } from '@nestjs/common';
 import { AlbumsService } from './albums.service';
 import { creteAlbumDto } from './dto/creteAlbumDto';
+import { JwtAuthGuard } from 'src/auth/jwt.guard';
 
 @Controller('album')
+@UseGuards(JwtAuthGuard)
 export class AlbumsController {
   constructor(private readonly albumsService: AlbumsService) {}
 
