# src/tracks/tracks.controller.ts
@@ -8,11 +8,14 @@ import {
   Param,
   Post,
   Put,
+  UseGuards,
 } from '@nestjs/common';
 import { TracksService } from './tracks.service';
 import { createTrackDto } from './dto/createTrackDto';
+import { JwtAuthGuard } from 'src/auth/jwt.guard';
 
 @Controller('track')
+@UseGuards(JwtAuthGuard)
 export class TracksController {
   constructor(private readonly tracksService: TracksService) {}
 
